deployments/monitoring/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`grafana.umhomelab.com`) || Host(`www.grafana.umhomelab.com`) || Host(`dashboard.umhomelab.com`) || Host(`www.dashboard.umhomelab.com`)"
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring
          port: 80
  tls: {}
